# alaris_gripper

./: README.md
alaris_gripper/: CMakeLists.txt  package.xml
alaris_gripper_control/: CMakeLists.txt  package.xml
alaris_gripper_control/config/: control.yaml
alaris_gripper_control/launch/: control.launch
alaris_gripper_description/: CMakeLists.txt  package.xml
alaris_gripper_description/launch/: description.launch
alaris_gripper_description/meshes/: Gripper_Assembly - M2.5_Screw_for_platform.STL  Gripper_Assembly - MX28T.STL  Gripper_Assembly - Nut_M2.5.STL  Gripper_Assembly - Retaining ring_1.STL  Gripper_Assembly - Retaining ring_2.STL  Gripper_Assembly - Standoff.STL  Gripper_Assembly - gear_30x4.STL  Gripper_Assembly - link_1.STL  Gripper_Assembly - link_2.STL  Gripper_Assembly - palm.STL  Gripper_Assembly - phalanx_1.STL  Gripper_Assembly - phalanx_2.STL  Gripper_Assembly - platform.STL  Gripper_Assembly - rubber_palm.STL  Gripper_Assembly - rubber_phalanx_1.STL  Gripper_Assembly - rubber_phalanx_2.STL  Gripper_Assembly - screw_standoff.STL  Gripper_Assembly - shaft_1.STL  Gripper_Assembly - shaft_2.STL  Gripper_Assembly - shaft_3.STL  Gripper_Assembly - shaft_4.STL  Gripper_Assembly - shaft_5.STL  Gripper_Assembly - worm.STL
alaris_gripper_description/meshes/fixed/: Gripper_Assembly - M2.5_Screw_for_platform.STL  Gripper_Assembly - MX28T.STL  Gripper_Assembly - platform.STL  Gripper_Assembly - rubber_palm.STL
alaris_gripper_description/urdf/: alaris_gripper.urdf.xacro
alaris_gripper_description/urdf/extras/: materials.urdf.xacro  properties.urdf.xacro
alaris_gripper_description/urdf/parts/: base.urdf.xacro  finger.urdf.xacro
alaris_gripper_gazebo/: CMakeLists.txt  package.xml
alaris_gripper_gazebo/launch/: alaris_gripper_empty_world.launch  spawn_alaris_gripper.launch
