<?xml version="1.0"?>
<package format="2">
  <name>alaris_gripper_control</name>
  <version>0.1.0</version>
  <description>The alaris_gripper_control package</description>

  <maintainer email="gstavrinos@iit.demokritos.gr">George Stavrinos</maintainer>

  <license>BSD</license>

  <author email="gstavrinos@iit.demokritos.gr">George Stavrinos</author>
  
  <buildtool_depend>catkin</buildtool_depend>

</package>
